--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #a3d65c;
+      background-color: white;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
@@ -35,7 +35,7 @@
 
     .contenedor-marco {
       background-color: white;
-      border: 5px solid #007837;
+      border: 5px solid black;
       border-radius: 20px;
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
       padding: 30px;
