--- a/index.html
+++ b/index.html
@@ -118,11 +118,10 @@
       <div class="formulario">
         <h2>Información</h2>
 
-        <label>Certified Organic by:</label>
-        <div class="campo">EU organic</div>
+        <label>Certified Organic by / Certifiè Biologique par:</label>
+        <div class="campo"><b>Control Union Certification</b></div>
 
-        <label>País de Origen:</label>
-        <div class="campo">Ecuador</div>
+        <div class="campo">PRODUCT OF ECUADOR - PRODUIT DE L'ÈQUATEUR</div>
       </div>
     </div>
 
