--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: white;
+      background-color: #f4f6f8;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
@@ -35,7 +35,7 @@
 
     .contenedor-marco {
       background-color: white;
-      border: 5px solid black;
+     /* border: 5px solid black;*/
       border-radius: 20px;
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
       padding: 30px;
@@ -118,10 +118,10 @@
       <div class="formulario">
         <h2>Información</h2>
 
-        <label>Certified Organic by / Certifiè Biologique par:</label>
+        <label><b>Certified Organic by / Certifiè Biologique par:</b></label>
         <div class="campo"><b>Control Union Certification</b></div>
-
-        <div class="campo">PRODUCT OF ECUADOR - PRODUIT DE L'ÈQUATEUR</div>
+        <label><b>Country of Origin / Pays D'origine:</b></label>
+        <div class="campo"><b>PRODUCT OF ECUADOR - PRODUIT DE L'ÈQUATEUR</b></div>
       </div>
     </div>
 
