--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <label><b>Certified Organic by / Certifiè Biologique par:</b></label>
         <div class="campo"><b>Control Union Certification</b></div>
         <label><b>Country of Origin / Pays D'origine:</b></label>
-        <div class="campo"><b>PRODUCT OF ECUADOR - PRODUIT DE L'ÈQUATEUR</b></div>
+        <div class="campo"><b>Product Of Ecuador - Produit De L'Èquateur</b></div>
       </div>
     </div>
 
