--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <div class="contenedor-principal">
 
     <div class="logo">
-      <img src="assets/logo.png" alt="Logo Del Monte">
+      <img src="assets/logo.png" alt="Logo Del Monte"><br><br>
     </div>
 
     <div class="contenedor-marco">
