--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     .contenedor-marco {
       background-color: white;
-     /* border: 5px solid black;*/
+      border: 3px solid light gray;
       border-radius: 20px;
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
       padding: 30px;
