--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     .contenedor-marco {
       background-color: white;
-      border: 6px solid light gray;
+      /*border: 5px solid light gray;*/
       border-radius: 20px;
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
       padding: 30px;
@@ -81,8 +81,8 @@
       width: 100%;
       height: auto;
       display: block;
-      max-height: 150px; /* controlamos que no sea tan alta */
-      object-fit: cover;
+      max-height: 100px; /* controlamos que no sea tan alta */
+      object-fit: fill;
     }
 
     /* Responsive */
