--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       height: auto;
       display: block;
       max-height: 100px; /* controlamos que no sea tan alta */
-      object-fit: scale-down;
+      object-fit: contain;
     }
 
     /* Responsive */
