--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
     }
 
     .fondo-decorativo img {
-      width: 300%;
+      width: 100%;
       height: auto;
       display: block;
       max-height: 100px; /* controlamos que no sea tan alta */
-      object-fit: contain;
+      object-fit: none;
     }
 
     /* Responsive */
