--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
 
     .contenedor-marco {
-      background-color: white;
+      background-color: transparent;
       /*border: 5px solid light gray;*/
       border-radius: 20px;
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
