--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       width: 100%;
       height: auto;
       display: block;
-      max-height: 100px; /* controlamos que no sea tan alta */
-      object-fit: none;
+      max-height: 80px; /* controlamos que no sea tan alta */
+      object-fit: cover;
     }
 
     /* Responsive */
