--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       height: auto;
       display: block;
       max-height: 80px; /* controlamos que no sea tan alta */
-      object-fit: cover;
+      object-fit: fill;
     }
 
     /* Responsive */
