--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
 
     .contenedor-marco {
-      background-color: transparent;
+      background-color: white;
       /*border: 5px solid light gray;*/
       border-radius: 20px;
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -82,7 +82,7 @@
       height: auto;
       display: block;
       max-height: 100px; /* controlamos que no sea tan alta */
-      object-fit: fill;
+      object-fit: none;
     }
 
     /* Responsive */
