--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     }
 
     .fondo-decorativo img {
-      /*width: 100%;*/
+      width: 100%;
       height: auto;
       display: block;
       max-height: 100px; /* controlamos que no sea tan alta */
@@ -99,8 +99,8 @@
       .logo img {
         width: 80px;
       }
-      .fondo-decorativo img {
-        max-height: 100px;
+     /* .fondo-decorativo img {
+        max-height: 100px;*/
       }
     }
   </style>
