--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
       .logo img {
         width: 80px;
       }
-     /* .fondo-decorativo img {
-        max-height: 100px;*/
+     .fondo-decorativo img {
+        max-height: 300px;
       }
     }
   </style>
