--- a/index.html
+++ b/index.html
@@ -72,15 +72,14 @@
     }
 
     .fondo-decorativo {
-      position: relative;
-      width: 100vw;
-      height: auto;
+      width: 100%;
       overflow: hidden;
       z-index: 5;
     }
-
+    
     .fondo-decorativo img {
       width: 100%;
+      max-height: 200px; /* <-- Cambia esto según tu preferencia visual */
       height: auto;
       display: block;
       object-fit: contain;
@@ -102,7 +101,7 @@
         width: 80px;
       }
      .fondo-decorativo img {
-        max-height: 300px;
+       max-height: 300px; /* un poco más alto en móvil */
       }
     }
   </style>
