--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     .fondo-decorativo {
       width: 100vw; /* Abarca toda la ventana del navegador */
       overflow: hidden;
+      margin-top: 5px
       z-index: 5;
       position: relative;
       margin-top: 30px;
@@ -84,7 +85,7 @@
       height: auto;
       display: block;
       object-fit: cover; /* Mantendra la escala de la imagen sin deformarla */
-      max-height: 10px;
+      max-height: 200px;
     }
 
 
@@ -104,7 +105,7 @@
         width: 80px;
       }
      .fondo-decorativo img {
-       max-height: 300px; /* un poco más alto en móvil */
+       max-height: 300px; 
       }
     }
   </style>
