--- a/index.html
+++ b/index.html
@@ -1,139 +1,112 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Formulario Del Monte</title>
-
+  <meta charset="UTF-8">
+  <title>Del Monte Info</title>
   <style>
-    /* Estilos internos */
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
+    }
+
+    body, html {
+      height: 100%;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f6f8;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    }
+
+    .contenedor {
       position: relative;
-      overflow-x: hidden;
-    }
-
-    .contenedor-principal {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding-top: 30px;
-      z-index: 10;
-    }
-
-    .logo img {
-      width: 100px;
-      height: auto;
-    }
-
-    .contenedor-marco {
-      background-color: white;
-      /*border: 5px solid light gray;*/
-      border-radius: 20px;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-      padding: 30px;
-      width: 90%;
-      max-width: 500px;
-      text-align: center;
-      z-index: 10;
-    }
-
-    .formulario h2 {
-      color: #007837;
-      font-size: 24px;
-      margin-bottom: 20px;
-    }
-
-    label {
-      display: block;
-      font-weight: bold;
-      margin-top: 20px;
-      color: #333;
-      font-size: 14px;
-      text-align: left;
-    }
-
-    .campo {
-      background-color: #eeeeee;
-      padding: 12px 15px;
-      border-radius: 10px;
-      color: #555;
-      margin-top: 5px;
-      font-style: italic;
-      font-size: 14px;
-      text-align: left;
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
     }
 
     .fondo-decorativo {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
-      height: 100vh; /* ocupará toda la pantalla */
-      display: flex;
-      justify-content: center;
-      align-items: start; /* para que la imagen quede arriba */
-      overflow: hidden;
-      margin: 0;
-      padding: 0;
+      height: 100%;
+      z-index: 0;
     }
-    
+
     .fondo-decorativo img {
       width: 100%;
       height: 100%;
-      object-fit: cover; /* hace que se adapte y ocupe toda el área sin deformarse */
+      object-fit: cover;
     }
 
+    .contenido {
+      position: relative;
+      z-index: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      text-align: center;
+      padding: 20px;
+    }
 
+    .logo {
+      max-width: 120px;
+      margin-bottom: 20px;
+    }
 
-    /* Responsive */
-    @media (max-width: 600px) {
-      .contenedor-marco {
-        padding: 20px;
-      }
-      .formulario h2 {
-        font-size: 20px;
-      }
-      label, .campo {
-        font-size: 13px;
-      }
-      .logo img {
-        width: 80px;
-      }
-     .fondo-decorativo img {
-       max-height: 300px; 
-      }
+    .card {
+      background: white;
+      border-radius: 16px;
+      padding: 30px 40px;
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+      max-width: 400px;
+      width: 100%;
+    }
+
+    h2 {
+      color: #007a33;
+      margin-bottom: 20px;
+    }
+
+    .campo {
+      margin-bottom: 15px;
+      text-align: left;
+    }
+
+    .campo b {
+      display: block;
+      margin-bottom: 5px;
+    }
+
+    .campo span {
+      background: #f1f1f1;
+      display: block;
+      padding: 8px 12px;
+      border-radius: 8px;
+      font-style: italic;
     }
   </style>
 </head>
-
 <body>
-
-  <div class="contenedor-principal">
-
-    <div class="logo">
-      <img src="assets/logo.png" alt="Logo Del Monte"><br><br>
+  <div class="contenedor">
+    <div class="fondo-decorativo">
+      <img src="assets/banner-del-monte.png" alt="Fondo decorativo Del Monte">
     </div>
-
-    <div class="contenedor-marco">
-      <div class="formulario">
+    <div class="contenido">
+      <img src="assets/logo.png" alt="Del Monte" class="logo">
+      <div class="card">
         <h2>Información</h2>
-
-        <label><b>Certified Organic by / Certifiè Biologique par:</b></label>
-        <div class="campo"><b>Control Union Certification</b></div>
-        <label><b>Country of Origin / Pays D'origine:</b></label>
-        <div class="campo"><b>Product Of Ecuador - Produit De L'Èquateur</b></div>
+        <div class="campo">
+          <b>Certified Organic by / Certifié Biologique par:</b>
+          <span>Control Union Certification</span>
+        </div>
+        <div class="campo">
+          <b>Country of Origin / Pays D'origine:</b>
+          <span>Product Of Ecuador - Produit De L'Équateur</span>
+        </div>
       </div>
     </div>
-
-  </div>
-
-  <div class="fondo-decorativo">
-  <img src="assets/banner-del-monte.png" alt="Banner decorativo">
   </div>
 </body>
 </html>
+
