--- a/index.html
+++ b/index.html
@@ -11,50 +11,23 @@
       padding: 0;
     }
 
-    body, html {
-      height: 100%;
+    body {
       font-family: 'Segoe UI', sans-serif;
-    }
-
-    .contenedor {
-      position: relative;
-      width: 100%;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    .fondo-decorativo {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
-      pointer-events: none;
-    }
-
-    .fondo-decorativo img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      transform: translateZ(-1px) scale(1.1);
-      will-change: transform;
-    }
-
-    .contenido {
-      position: relative;
-      z-index: 1;
+      min-height: 100vh;
+      background-color: #f5f7f9;
+      background-image: url('assets/banner-del-monte.png'); 
+      background-repeat: no-repeat;
+      background-position: bottom center;
+      background-size: cover;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      padding: 20px;
-      text-align: center;
+      padding: 40px 20px;
     }
 
     .logo {
-      max-width: 100px;
+      width: 100px;
       margin-bottom: 20px;
     }
 
@@ -63,29 +36,29 @@
       border-radius: 20px;
       padding: 30px 40px;
       box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-      max-width: 400px;
+      max-width: 420px;
       width: 100%;
+      z-index: 1;
     }
 
     h2 {
       color: #007a33;
       margin-bottom: 20px;
-      font-size: 1.5rem;
+      text-align: center;
     }
 
     .campo {
       margin-bottom: 15px;
-      text-align: left;
     }
 
     .campo b {
       display: block;
-      margin-bottom: 5px;
       font-size: 0.95rem;
+      margin-bottom: 5px;
     }
 
     .campo span {
-      background: #f4f4f4;
+      background: #f0f0f0;
       display: block;
       padding: 10px 14px;
       border-radius: 10px;
@@ -93,40 +66,28 @@
       font-size: 0.95rem;
     }
 
-    /* Responsivo */
     @media (max-width: 480px) {
-      .logo {
-        max-width: 80px;
-      }
-
       .card {
         padding: 20px;
       }
 
-      h2 {
-        font-size: 1.3rem;
+      .logo {
+        width: 80px;
       }
     }
   </style>
 </head>
 <body>
-  <div class="contenedor">
-    <div class="fondo-decorativo">
-      <img src="assets/banner-del-monte.png" alt="Fondo decorativo Del Monte">
+  <img src="assets/logo.png" alt="Del Monte Logo" class="logo"> 
+  <div class="card">
+    <h2>Información</h2>
+    <div class="campo">
+      <b>Certified Organic by / Certifié Biologique par:</b>
+      <span>Control Union Certification</span>
     </div>
-    <div class="contenido">
-      <img src="assets/logo.png" alt="Del Monte" class="logo">
-      <div class="card">
-        <h2>Información</h2>
-        <div class="campo">
-          <b>Certified Organic by / Certifié Biologique par:</b>
-          <span>Control Union Certification</span>
-        </div>
-        <div class="campo">
-          <b>Country of Origin / Pays D'origine:</b>
-          <span>Product Of Ecuador - Produit De L'Équateur</span>
-        </div>
-      </div>
+    <div class="campo">
+      <b>Country of Origin / Pays D'origine:</b>
+      <span>Product Of Ecuador - Produit De L'Équateur</span>
     </div>
   </div>
 </body>
