--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Del Monte Info</title>
+  <title>Del Monte Informacion</title>
   <style>
     * {
       box-sizing: border-box;
@@ -38,7 +38,7 @@
       box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
       max-width: 420px;
       width: 100%;
-      z-index: 1;
+      z-index: 0;
     }
 
     h2 {
