--- a/index.html
+++ b/index.html
@@ -66,17 +66,15 @@
       font-size: 0.95rem;
     }
     .footer-bg {
-      position: fixed;
-      bottom: 0;
-      left: 0;
       width: 100%;
-      z-index: 0; 
+      overflow: hidden;
+      position: relative;
+      margin-top: 40px; 
     }
     
     .footer-bg img {
       width: 100%;
-      max-height: 200px; 
-      object-fit: cover;
+      height: auto;
       display: block;
     }
 
