--- a/index.html
+++ b/index.html
@@ -3,117 +3,133 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Del Monte Información</title>
+  <title>Formulario Del Monte</title>
+
   <style>
-    * {
-      box-sizing: border-box;
+    /* Estilos internos */
+    body {
       margin: 0;
       padding: 0;
-    }
-
-    body {
       font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f6f8;
       min-height: 100vh;
-      background-color: #f5f7f9;
-      position: relative;
-      padding: 40px 20px 280px; /* espacio inferior reducido */
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      position: relative;
       overflow-x: hidden;
     }
 
-    .logo {
+    .contenedor-principal {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 30px;
+      z-index: 10;
+    }
+
+    .logo img {
       width: 100px;
-      margin-bottom: 20px;
-      z-index: 1;
+      height: auto;
     }
 
-    .card {
-      background: white;
+    .contenedor-marco {
+      background-color: white;
+      /*border: 5px solid light gray;*/
       border-radius: 20px;
-      padding: 30px 40px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-      max-width: 420px;
-      width: 100%;
-      z-index: 1;
-      position: relative;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+      padding: 30px;
+      width: 90%;
+      max-width: 500px;
+      text-align: center;
+      z-index: 10;
     }
 
-    h2 {
-      color: #007a33;
+    .formulario h2 {
+      color: #007837;
+      font-size: 24px;
       margin-bottom: 20px;
-      text-align: center;
+    }
+
+    label {
+      display: block;
+      font-weight: bold;
+      margin-top: 20px;
+      color: #333;
+      font-size: 14px;
+      text-align: left;
     }
 
     .campo {
-      margin-bottom: 15px;
-    }
-
-    .campo b {
-      display: block;
-      font-size: 0.95rem;
-      margin-bottom: 5px;
-    }
-
-    .campo span {
-      background: #f0f0f0;
-      display: block;
-      padding: 10px 14px;
+      background-color: #eeeeee;
+      padding: 12px 15px;
       border-radius: 10px;
+      color: #555;
+      margin-top: 5px;
       font-style: italic;
-      font-size: 0.95rem;
+      font-size: 14px;
+      text-align: left;
     }
 
-    .footer-bg {
-      background-image: url('assets/banner-del-monte.png');
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: bottom center;
-      position: absolute;
-      bottom: 0px; 
-      left: 0;
+    .fondo-decorativo {
       width: 100%;
-      height: 280px;
-      z-index: 0;
+      margin-top: 0px; /* sube un poco para que pegue */
+      z-index: 5;
     }
 
-    @media (max-width: 480px) {
-      .card {
+    .fondo-decorativo img {
+      width: 100%;
+      height: auto;
+      display: block;
+      max-height: 100px; /* controlamos que no sea tan alta */
+      object-fit: scale-down;
+    }
+
+    /* Responsive */
+    @media (max-width: 600px) {
+      .contenedor-marco {
         padding: 20px;
       }
-
-      .logo {
+      .formulario h2 {
+        font-size: 20px;
+      }
+      label, .campo {
+        font-size: 13px;
+      }
+      .logo img {
         width: 80px;
       }
-
-      .footer-bg {
-        height: 220px;
-        bottom: -20px;
-        background-size: 100% auto; /* ajusta al ancho del móvil */
-        background-position: bottom center;
-      }
-
-      body {
-        padding-bottom: 240px; 
+     .fondo-decorativo img {
+        max-height: 300px;
       }
     }
   </style>
 </head>
+
 <body>
-  <img src="assets/logo.png" alt="Del Monte Logo" class="logo"/>
-  <div class="card">
-    <h2>Información</h2>
-    <div class="campo">
-      <b>Certified Organic by / Certifié Biologique par:</b>
-      <span>Control Union Certification</span>
+
+  <div class="contenedor-principal">
+
+    <div class="logo">
+      <img src="assets/logo.png" alt="Logo Del Monte"><br><br>
     </div>
-    <div class="campo">
-      <b>Country of Origin / Pays D'origine:</b>
-      <span>Product Of Ecuador - Produit De L'Équateur</span>
+
+    <div class="contenedor-marco">
+      <div class="formulario">
+        <h2>Información</h2>
+
+        <label><b>Certified Organic by / Certifiè Biologique par:</b></label>
+        <div class="campo"><b>Control Union Certification</b></div>
+        <label><b>Country of Origin / Pays D'origine:</b></label>
+        <div class="campo"><b>Product Of Ecuador - Produit De L'Èquateur</b></div>
+      </div>
     </div>
+
   </div>
-  <div class="footer-bg"></div>
+
+  <div class="fondo-decorativo">
+    <img src="assets/banner-del-monte.png" alt="Banner decorativo">
+  </div>
+
 </body>
 </html>
