--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     .fondo-decorativo {
       width: 100%;
-      margin-top: 0px; /* sube un poco para que pegue */
+      margin-top: 0px; 
       z-index: 5;
     }
 
@@ -81,7 +81,7 @@
       width: 100%;
       height: auto;
       display: block;
-      max-height: 100px; /* controlamos que no sea tan alta */
+      max-height: 100px; 
       object-fit: scale-down;
     }
 
